unpackaged/main/default/objects/FSL_Application_Log__c/FSL_Application_Log__c.object-meta.xml
<CustomObject>
    <label>Application Log</label>
    <nameField>
        <displayFormat>AN-{00000000}</displayFormat>
        <label>API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>