unpackaged/main/default/objects/FSL_Application_Log__c/fields/Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number__c</fullName>
    <label>Appointment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>