unpackaged/main/default/objects/FSL_Application_Log__c/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>