unpackaged/main/default/objects/FSL_Application_Log__c/fields/Call_Version__c.field-meta.xml
<CustomField>
    <fullName>Call_Version__c</fullName>
    <label>Call Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>