unpackaged/main/default/objects/FSL_Application_Log__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>