unpackaged/main/default/objects/FSL_Application_Log__c/fields/ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTime__c</fullName>
    <formula>InputProcessingTime__c +  ServiceTime__c +  OutputProcessingTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>