unpackaged/main/default/objects/FSL_Application_Log__c/fields/Failed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Count__c</fullName>
    <label>Failed Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>