unpackaged/main/default/objects/FSL_Application_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Unscheduling</fullName>
            </value>
            <value>
                <fullName>Glympse</fullName>
            </value>
            <value>
                <fullName>CallCreate</fullName>
            </value>
            <value>
                <fullName>GlympseOut</fullName>
            </value>
            <value>
                <fullName>GlympseIn</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>AddressChange</fullName>
            </value>
            <value>
                <fullName>RoutingChange</fullName>
            </value>
            <value>
                <fullName>LKL</fullName>
            </value>
            <value>
                <fullName>Call Clear</fullName>
            </value>
            <value>
                <fullName>ETALog</fullName>
            </value>
            <value>
                <fullName>IVRLookup</fullName>
            </value>
            <value>
                <fullName>ServiceTrackingLog</fullName>
            </value>
            <value>
                <fullName>WOCreateEventLog</fullName>
            </value>
            <value>
                <fullName>WOStatusUpdateLog</fullName>
            </value>
            <value>
                <fullName>RetrieveWorkOrders</fullName>
            </value>
            <value>
                <fullName>Update Facility</fullName>
            </value>
            <value>
                <fullName>Delayed Copy to Clear Queue</fullName>
            </value>
            <value>
                <fullName>CalculateDistanceInMiles</fullName>
            </value>
            <value>
                <fullName>ServiceLineItemFailed</fullName>
            </value>
            <value>
                <fullName>ValidateWaitTime</fullName>
            </value>
            <value>
                <fullName>CalculatedMileage</fullName>
            </value>
            <value>
                <fullName>Clear Queue</fullName>
            </value>
            <value>
                <fullName>UpsertResourceAbsence</fullName>
            </value>
            <value>
                <fullName>WOJeopardyAPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>