unpackaged/main/default/objects/FSL_Application_Log__c/fields/Optimization_Request__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optimization Request</label>
    <referenceTo>FSL__Optimization_Request__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>