unpackaged/main/default/objects/FSL_Application_Log__c/fields/Optimization_Setting__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Setting__c</fullName>
    <label>Optimization Setting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>