unpackaged/main/default/objects/FSL_Application_Log__c/fields/Platform_Event_Data__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Data__c</fullName>
    <label>Platform Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>