unpackaged/main/default/objects/FSL_Application_Log__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>