unpackaged/main/default/objects/FSL_Application_Log__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>