unpackaged/main/default/objects/FSL_Application_Log__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <length>250</length>
    <type>Text</type>
</CustomField>