unpackaged/main/default/objects/FSL_Application_Log__c/fields/ServiceTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceTime__c</fullName>
    <label>Service Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>