unpackaged/main/default/objects/FSL_Application_Log__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <label>Success Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>