unpackaged/main/default/objects/FSL_Application_Log__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <label>Task Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>