unpackaged/main/default/objects/FSL_Application_Log__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>