unpackaged/main/default/objects/FSL_Application_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Optimization_Request__r.FSL__Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>