unpackaged/main/default/objects/FSL_Application_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>