unpackaged/main/default/objects/FSL_Application_Log__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Used as default record type</description>
    <label>General</label>
</RecordType>