unpackaged/main/default/objects/FSL_Application_Log__c/recordTypes/Platform_Event.recordType-meta.xml
<RecordType>
    <fullName>Platform_Event</fullName>
    <active>true</active>
    <label>Platform Event</label>
</RecordType>