unpackaged/main/default/objects/FSL_Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Call_Id__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Success_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>