unpackaged/main/default/objects/FSL_Application_Log__c/listViews/All_Cap.listView-meta.xml
<ListView>
    <fullName>All_Cap</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>Call_Id__c</columns>
    <columns>API_Name__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Task_Id__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Message__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Cap</label>
</ListView>