unpackaged/main/default/objects/FSL_Application_Log__c/listViews/All_Kevan.listView-meta.xml
<ListView>
    <fullName>All_Kevan</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Operation__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>API_Name__c</columns>
    <columns>Call_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Caught__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Message__c</columns>
    <columns>ElapsedTime__c</columns>
    <columns>DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>WorkOrder Clear Event</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>4/8/2025 12:00 AM</value>
    </filters>
    <label>RAP Clear Event Error: String Too Long</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>