unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Auto_Schedule_Calls.listView-meta.xml
<ListView>
    <fullName>Auto_Schedule_Calls</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Call_Id__c</columns>
    <columns>Call_Version__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Success_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Schedule API Call</value>
    </filters>
    <label>Auto Schedule Calls</label>
</ListView>