unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Clear_Logs.listView-meta.xml
<ListView>
    <fullName>Clear_Logs</fullName>
    <columns>NAME</columns>
    <columns>Call_Id__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operation__c</field>
        <operation>equals</operation>
        <value>Clear,Delayed Copy to Clear Queue</value>
    </filters>
    <filters>
        <field>Error_Caught__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Clear Logs</label>
</ListView>