unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Create_Call.listView-meta.xml
<ListView>
    <fullName>Create_Call</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>API_Name__c</columns>
    <columns>Call_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Create Workorder API</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/2/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Work_Order__c</field>
        <operation>contains</operation>
        <value>03723082</value>
    </filters>
    <label>Create Workorder</label>
</ListView>