unpackaged/main/default/objects/FSL_Application_Log__c/listViews/D3_Callout.listView-meta.xml
<ListView>
    <fullName>D3_Callout</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Call_Id__c</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Operation__c</field>
        <operation>equals</operation>
        <value>Clear</value>
    </filters>
    <label>D3 Callout</label>
</ListView>