unpackaged/main/default/objects/FSL_Application_Log__c/listViews/ExceptionQueue_Application_Log.listView-meta.xml
<ListView>
    <fullName>ExceptionQueue_Application_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>ExceptionQueue</label>
    <queue>ExceptionQueue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>