unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Glympse.listView-meta.xml
<ListView>
    <fullName>Glympse</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Operation__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operation__c</field>
        <operation>contains</operation>
        <value>Glympse</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Glympse</label>
</ListView>