unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Glympse_Errors.listView-meta.xml
<ListView>
    <fullName>Glympse_Errors</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>API_Name__c</columns>
    <columns>Call_Id__c</columns>
    <columns>Success_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Task_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Service_Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operation__c</field>
        <operation>contains</operation>
        <value>Glympse</value>
    </filters>
    <filters>
        <field>Error_Caught__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Glympse Errors</label>
</ListView>