unpackaged/main/default/objects/FSL_Application_Log__c/listViews/Inbound_Update_Cancel.listView-meta.xml
<ListView>
    <fullName>Inbound_Update_Cancel</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>Success_Message__c</columns>
    <columns>Error_Caught__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Inbound Update/Cancel</value>
    </filters>
    <label>Inbound Update/Cancel</label>
    <language>en_US</language>
</ListView>